--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					  </a>
 					</li>
 					<li>
-					  <a href="#" class="item-link item-content">
+					  <a href="/Notificaciones/" class="item-link item-content">
 						<div class="item-media">
 						  	<span class="material-icons">notifications</span>
 						  </div>
@@ -144,10 +144,10 @@
 			<div class="row">
 				<article class="col">
 					
-					<h2> <a href="app/categorias.html" class="block-title block-title-medium">Categorias</a></h2>
+					<h2 class="block-title block-title-medium">Categorias</h2>
 				</article>
 				<article class="col text-align-right">
-					<h3 class="block-title link"><a href="categorias.html" class="link">Ver todos</a></h3>
+					<h3 class="block-title link"><a href="/Categorias/" class="link">Ver todos</a></h3>
 				  </article>
 			</div>
 			
@@ -273,7 +273,7 @@
 		
 		<nav class="toolbar tabbar tabbar-labels toolbar-bottom">
 			<div class="toolbar-inner">
-				<a href="index.html" class="link">
+				<a href="/home/" class="link">
 					<i class="material-icons">home</i>
 					<span class="tabbar-label">Home</span>
 				</a>
@@ -281,7 +281,7 @@
 					<i class="material-icons">favorite</i>
 					<span class="tabbar-label">Favorite</span>
 				</a>
-				<a href="#" class="link">
+				<a href="/Comprar/" class="link">
 					<i class="material-icons">shopping_basket</i>
 					<span class="tabbar-label">Cart</span>
 				</a>
