--- a/info.html
+++ b/info.html
@@ -1,3 +1,17 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Framework7</title>
+<link href="css/framework7.bundle.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+
 <section class="page" data-name="info">
 
 
@@ -51,7 +65,7 @@
 					<p class="precio-producto medium">$7.50</p>
 				</article>
 				<article class="col">
-					<a href="#" class="button button-fill button-round link-icon">
+					<a href="/Comprar/" class="button button-fill button-round link-icon">
 						<span class="material-icons">add</span> Add to basket
 					</a>
 				</article>
@@ -72,7 +86,7 @@
                         </div>
                         <div class="card-footer">
                             <p class="precio-producto">$5.75</p>
-                            <a href="/ice-latte/">
+                            <a href="/Ice-latte/">
                                 <span class="material-icons">
                                 add
                                 </span>
@@ -89,7 +103,7 @@
                         </div>
                         <div class="card-footer">
                             <p class="precio-producto">$5.75</p>
-                            <a href="/ice-latte/">
+                            <a href="/Ice-latte/">
                                 <span class="material-icons">
                                 add
                                 </span>
@@ -100,8 +114,37 @@
 			</div>
 		
 		</div>
+		
+		<nav class="toolbar tabbar tabbar-labels toolbar-bottom">
+			<div class="toolbar-inner">
+				<a href="/home/" class="link">
+					<i class="material-icons">home</i>
+					<span class="tabbar-label">Home</span>
+				</a>
+				<a href="/products/" class="link">
+					<i class="material-icons">favorite</i>
+					<span class="tabbar-label">Favorite</span>
+				</a>
+				<a href="/Comprar/" class="link">
+					<i class="material-icons">shopping_basket</i>
+					<span class="tabbar-label">Cart</span>
+				</a>
+				<a href="#" class="link">
+					<i class="material-icons">account_circle</i>
+					<span class="tabbar-label">Profile</span>
+				</a>
+			</div>
+		</nav>
 	
 	</section>
 	
 	
 </section>
+	
+	
+	
+	<script src="js/framework7.bundle.min.js"></script>
+	<script src="js/app.js"></script>
+	
+	</body>
+	</html>
